# Exploring-the-Emergence-of-Temperature-Concept-within-Deep-Neural-Networks

./: .gitignore  DatasetGeneration.ipynb  Exp1_1-initialCAE_3ball.ipynb  Exp1_2-finalUNet_3ball.ipynb  Exp1_2-initialUNet_3ball.ipynb  Exp1_2-initialUNet_3ball_color.ipynb  Exp1_3-finalCAE_1ball.ipynb  Exp1_3-finalCAE_3ball.ipynb  Exp2-3ball.ipynb  Exp3-1ball.ipynb  Exp3-3ball.ipynb  Exp3-3ball_color.ipynb  Exp4-1ball_all_pixels.ipynb  Exp4-1ball_central_pixel.ipynb  Exp4-3ball_central_pixel.ipynb  README.md  pyproject.toml
.github/workflows/: pr.yml
src/: dataset_analysis.py  dataset_generation.py  utils.py
src/dataset/: dataset_analysis.py  dataset_generation.py  utils.py
src/experiment/: data_loading.py  model_blocks.py  models.py  regression_evaluation.py  visualization.py
